// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty headings 1`] = `
"export const rightToc = [];

# Ignore this

## 

## ![](an-image.svg)
"
`;

exports[`no options 1`] = `
"export const rightToc = [
	{
		value: 'Endi',
		id: 'endi',
		children: []
	},
	{
		value: 'Endi',
		id: 'endi-1',
		children: [
			{
				value: 'Yangshun',
				id: 'yangshun',
				children: []
			}
		]
	},
	{
		value: 'I ♥ unicode.',
		id: 'i--unicode',
		children: []
	}
];

### Endi

\`\`\`md
## This is ignored
\`\`\`

## Endi

Lorem ipsum

### Yangshun

Some content here

## I ♥ unicode.
"
`;

exports[`should export even with existing name 1`] = `
"export const rightToc = [
	{
		value: 'Thanos',
		id: 'thanos',
		children: []
	},
	{
		value: 'Tony Stark',
		id: 'tony-stark',
		children: [
			{
				value: 'Avengers',
				id: 'avengers',
				children: []
			}
		]
	}
];

## Thanos

## Tony Stark

### Avengers
"
`;

exports[`should export with custom name 1`] = `
"export const customName = [
	{
		value: 'Endi',
		id: 'endi',
		children: []
	},
	{
		value: 'Endi',
		id: 'endi-1',
		children: [
			{
				value: 'Yangshun',
				id: 'yangshun',
				children: []
			}
		]
	},
	{
		value: 'I ♥ unicode.',
		id: 'i--unicode',
		children: []
	}
];

### Endi

\`\`\`md
## This is ignored
\`\`\`

## Endi

Lorem ipsum

### Yangshun

Some content here

## I ♥ unicode.
"
`;

exports[`should insert below imports 1`] = `
"import something from 'something';

import somethingElse from 'something-else';

export const rightToc = [
	{
		value: 'Title',
		id: 'title',
		children: []
	},
	{
		value: 'Test',
		id: 'test',
		children: [
			{
				value: 'Again',
				id: 'again',
				children: []
			}
		]
	}
];

## Title

## Test

### Again

Content.
"
`;
